# AGENTIC_LEARNING

./: .gitignore  main.py  pyproject.toml  requirements.txt
Study/LLM_with_tools/: New Section 1.one  Open Notebook.onetoc2
Study/Study/: New Section 1.one  Open Notebook.onetoc2
workflow_understanding/: BAsic_chatbot.ipynb  Iterative_workflow.ipynb  LLM_CONDITIONAL_SENTIMENTAL.ipynb  LLM_QA_workflow.ipynb  LLM_with_tools.ipynb  batsman parallel workflow.ipynb  loan_NO_LLM_conditional.ipynb  parellel_wokflow_with_LLMS.ipynb  promt_chaining.ipynb  simple_workflow.ipynb
